--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     implementation 'com.github.qdxxxx:StickyHeaderDecoration:1.0.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
     implementation 'com.pgyersdk:sdk:3.0.10'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4'
 }
