--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,10 +4,10 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.step.sacannership"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
-        versionCode 102
-        versionName "V1.0.42"
+        versionCode 103
+        versionName "V1.0.44"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
@@ -25,7 +25,7 @@ android {
 
     applicationVariants.all { variant ->
         variant.outputs.all { output ->
-            outputFileName = "MES@${variant.versionName}-0407.apk"
+            outputFileName = "MES@${variant.versionName}-0615.apk"
         }
     }
 
@@ -51,6 +51,14 @@ android {
             zipAlignEnabled true
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
+
+    buildFeatures{
+        dataBinding = true
+    }
 }
 
 dependencies {
@@ -59,7 +67,7 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.qmuiteam:qmui:1.4.0'
+    implementation 'com.qmuiteam:qmui:2.0.1'
     implementation 'com.jakewharton:butterknife:10.2.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
